fix: horizontal scroll

--- a/src/ui/tailwind.css
+++ b/src/ui/tailwind.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow-x: hidden;
+}
+
 .bg-gradient {
   background: radial-gradient(rgb(57, 211, 83), rgb(0, 0, 0) 80%);
   opacity: 0.2;
